--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"tailwind": "npx tailwindcss -i assets/css/style.css -o assets/css/style.min.css"
+    "tailwind": "npx tailwindcss -i assets/css/style.css -o assets/css/style.min.css",
+    "start": "eleventy --serve & postcss assets/css/style.css --o assets/css/style.min.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
     "@11ty/eleventy": "^0.12.1",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^8.0.1",
     "tailwindcss": "^2.2.7"
   }
 }
